Fixed - Location Address Overflow Issue

--- a/assets/css/all-listings.css
+++ b/assets/css/all-listings.css
@@ -11072,16 +11072,18 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
     width: 100%;
     margin: 0;
     max-width: unset;
+    overflow: visible;
   }
   .directorist-search-form__top .directorist-search-modal__contents__body {
     height: auto;
     padding: 0;
+    gap: 18px;
+    margin: 0;
+    overflow: unset;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    gap: 18px;
-    margin: 0;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
